# cpp-coop-games

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  client.cpp  main.cpp
TicTacToe/: .gitignore  CMakeLists.txt  client.cpp  client.h  main.cpp  out  server.cpp  server.h  settings.h  settings.hpp  tests.cpp
TronGame/: CMakeLists.txt  game.cpp  game.h  main.cpp  player.cpp  player.h  player.hpp  settings.h  settings.hpp  tests.cpp
